iac/1.manifests/sock-shop/sock-shop/canary-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end
  namespace: sock-shop
spec:
  hosts:
  - '*'
  gateways:
  - sockshop-gateway
  http:
  - route:
    - destination:
        host: front-end.sock-shop.svc.cluster.local
        subset: v1
      weight: 90
    - destination:
        host: front-end.sock-shop.svc.cluster.local
        subset: v2
      weight: 10
