iac/1.manifests/sock-shop/sock-shop/circuit-dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: front-end
  namespace: sock-shop
spec:
  host: front-end.sock-shop.svc.cluster.local
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 2
        maxRequestsPerConnection: 2  # KeepAlive is disabled
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
