iac/1.manifests/sock-shop/sock-shop/delay-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: catalogue
spec:
  hosts:
  - catalogue.sock-shop.svc.cluster.local
  http:
  - fault:
      delay:
        percentage:
          value: 50
    route:
    - destination:
        host: catalogue.sock-shop.svc.cluster.local
        subset: v1
