iac/1.manifests/sock-shop/sock-shop/v1-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: front-end
spec:
  hosts:
  - test.bluegreen
  gateways:
  - sockshop-gateway
  http:
  - route:
    - destination:
        host: front-end.sock-shop.svc.cluster.local
        subset: v1
